--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "3.12.1"
+pydantic = "^2.8.2"
+python-dotenv = "^1.0.1"
+requests = "^2.32.3"
 
 
 [build-system]
