--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "3.12.1"
 pydantic = "^2.8.2"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
+black = "^24.8.0"
+isort = "^5.13.2"
 
 
 [build-system]
